--- a/tools/index.html
+++ b/tools/index.html
@@ -185,6 +185,26 @@ code block.
     pass
 </code></pre>
 
+<script type="application/javascript">
+function resizeIFrameToFitContent( iFrame ) {
+
+    iFrame.width  = iFrame.contentWindow.document.body.scrollWidth;
+    iFrame.height = iFrame.contentWindow.document.body.scrollHeight;
+}
+
+window.addEventListener('DOMContentReady', function(e) {
+
+    var iFrame = document.getElementById( 'iFrame1' );
+    resizeIFrameToFitContent( iFrame );
+
+    // or, to resize all iframes:
+    var iframes = document.querySelectorAll("iframe");
+    for( var i = 0; i < iframes.length; i++) {
+        resizeIFrameToFitContent( iframes[i] );
+    }
+} );
+</script>
+
 <iframe class="youtube-preview" src="https://www.youtube.com/embed/Kjqx6cKUepc" allowfullscreen width="700" height="400"></iframe>
 
 <iframe class="youtube-preview" src="https://www.youtube.com/embed/BxqaYrRII5A" allowfullscreen width="700" height="400"></iframe>
