Tests iframe tag

--- a/tools/index.html
+++ b/tools/index.html
@@ -185,7 +185,7 @@ code block.
     pass
 </code></pre>
 
-<iframe class="youtube-preview" src="https://www.youtube.com/embed/Kjqx6cKUepc" allowfullscreen width="500" height="350"></iframe>
+<iframe class="youtube-preview" src="https://www.youtube.com/embed/Kjqx6cKUepc" allowfullscreen></iframe>
 
 <iframe class="youtube-preview" src="https://www.youtube.com/embed/BxqaYrRII5A" allowfullscreen width="500" height="350"></iframe>
               
