Email has been added in Contact page.

--- a/contact/index.html
+++ b/contact/index.html
@@ -501,6 +501,7 @@
                 <p>If you want more latest news about UModeler, please visit links below.</p>
 <p><a href="https://www.facebook.com/umodeler/">Facebook</a></p>
 <p><a href="https://twitter.com/tripolygon">Twitter</a></p>
+<p>E-Mail : contact.support@tripolygon.com</p>
               
             </div>
           </div>
