--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
               
                 <h1 id="welcome-to-umodeler">Welcome to UModeler</h1>
 <p>UModeler is the modeling tool for Unity.
-UModeler allows you to make meshes for real assets as well as prototype levels without leaving Unity Editor.</p>
+UModeler allows you to make meshes for real assets as well as levels without leaving Unity Editor.</p>
 <p><img alt="Screenshot" src="./img/umodeler_background_2.png" /></p>
 <h1 id="key-features">Key Features</h1>
 <ul>
@@ -579,5 +579,5 @@ UModeler allows you to make meshes for real assets as well as prototype levels w
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-10-16 02:36:17.371990
+Build Date UTC : 2016-10-17 02:18:14.699622
 -->
