Correccts the basic_vs_pro_comparison page.

--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -139,11 +139,11 @@
 <blockquote>
 <div><dl class="docutils">
 <dt>UModeler Basic</dt>
-<dd>Basic version includes the core features enough to create simple meshes and levels.
+<dd>The basic version includes the core features enough to create simple meshes and levels.
 This is free.</dd>
 <dt>UModeler Pro</dt>
-<dd>Pro version has lots of advanced tools such as bevel, boolean, mirror, slice, loop slice, follow and much more.
-With Pro version you can make complicated shapes which can be used for real assets without leaving Unity.
+<dd>The Pro version has lots of advanced tools such as bevel, boolean, mirror, slice, loop slice, follow, and much more.
+With Pro version, you can make complicated shapes for real assets without leaving Unity.
 This is a paid extension.</dd>
 </dl>
 </div></blockquote>
