--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -166,52 +166,52 @@ This is a paid extension.</dd>
 <td>O</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Magnet</td>
+<tr class="row-odd"><td>All/None Selection</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>All/None Selection</td>
+<tr class="row-even"><td>Isolated Selection</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Isolated Selection</td>
+<tr class="row-odd"><td>Loop Selection</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Loop Selection</td>
+<tr class="row-even"><td>Ring Selection</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Ring Selection</td>
+<tr class="row-odd"><td>Invert Selection</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Invert Selection</td>
+<tr class="row-even"><td>Grow Selection</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Grow Selection</td>
+<tr class="row-odd"><td>Polyline</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Curve</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Rectangle</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Disc</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Stair Profile</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Polyline</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Curve</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Rectangle</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Disc</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Stair Profile</td>
-<td>O</td>
+<tr class="row-even"><td>Parallel</td>
+<td>&nbsp;</td>
 <td>O</td>
 </tr>
 <tr class="row-odd"><td>Box</td>
@@ -364,6 +364,10 @@ This is a paid extension.</dd>
 </tr>
 <tr class="row-even"><td>Export to Obj</td>
 <td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Backface</td>
+<td>O</td>
 <td>O</td>
 </tr>
 </tbody>
