Updates the first page of builing a simple house

--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -318,59 +318,63 @@ This is a paid extension.</dd>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Follow</td>
+<tr class="row-odd"><td>Clip</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Bevel</td>
+<tr class="row-even"><td>Follow</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Clone</td>
+<tr class="row-odd"><td>Bevel</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Material</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>UV</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Color</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Smoothing Group</td>
+<tr class="row-even"><td>Clone</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Center Pivot</td>
+<tr class="row-odd"><td>Material</td>
 <td>O</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Reset X Form</td>
+<tr class="row-even"><td>UV</td>
 <td>O</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Pivot</td>
+<tr class="row-odd"><td>Color</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Smoothing Group</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Collider</td>
+<tr class="row-odd"><td>Center Pivot</td>
 <td>O</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Export to Obj</td>
+<tr class="row-even"><td>Reset X Form</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Pivot</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Backface</td>
+<tr class="row-even"><td>Collider</td>
 <td>O</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Converts Mesh to UModeler</td>
+<tr class="row-odd"><td>Export to Obj</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Backface</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Converts Mesh to UModeler</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
