Adds a video to the first page of simple house

--- a/tutorials/simple_house/introduction.html
+++ b/tutorials/simple_house/introduction.html
@@ -180,7 +180,7 @@
 </li>
 </ul>
 </div>
-</div>
+<iframe width="540" height="300" class="youtube-preview" src="https://www.youtube.com/embed/ZJXHkNmXNDg" allowfullscreen></iframe></div>
 
 
            </div>
