basic_vs_pro_comparison page has been updated.

--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -166,200 +166,208 @@ This is a paid extension.</dd>
 <td>O</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>All/None Selection</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Isolated Selection</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Loop Selection</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Ring Selection</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Invert Selection</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Grow Selection</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Polyline</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Curve</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Rectangle</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Disc</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Stair Profile</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Parallel</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Box</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Room</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Stair</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Cylinder</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Cone</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Sphere</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Capsule</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Eraser</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Copy</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Bridge Fill</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Bridge</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Flip</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Separate</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Merge</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Merge Vertex/Edge</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Remove doubles</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Collapse</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Extrude</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Extrude Edge</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Extrude Multiple</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Inset</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Inset Multiple</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Boolean</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Mirror</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Slice</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Loop Slice</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Clip</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Follow</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Bevel</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Clone</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Material</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>UV</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Color</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Smoothing Group</td>
-<td>&nbsp;</td>
-<td>O</td>
-</tr>
-<tr class="row-odd"><td>Center Pivot</td>
-<td>O</td>
-<td>O</td>
-</tr>
-<tr class="row-even"><td>Reset X Form</td>
-<td>O</td>
-<td>O</td>
-</tr>
 <tr class="row-odd"><td>Pivot</td>
 <td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Cursor (3D cursor)</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Snap (to vertex)</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>All/None Selection</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Isolated Selection</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Loop Selection</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Ring Selection</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Invert Selection</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Grow Selection</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Polyline</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Curve</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Rectangle</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Disc</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Stair Profile</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Parallel</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Box</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Room</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Stair</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Cylinder</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Cone</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Sphere</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Capsule</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Eraser</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Copy</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Bridge Fill</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Bridge</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Flip</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Separate</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Merge</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Merge Vertex/Edge</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Remove doubles</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Collapse</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Extrude</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Extrude Edge</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Extrude Multiple</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Inset</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Inset Multiple</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Boolean</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Mirror</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Slice</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Loop Slice</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Clip</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Follow</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Bevel</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Clone</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Material</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>UV</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Color</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Smoothing Group</td>
+<td>&nbsp;</td>
+<td>O</td>
+</tr>
+<tr class="row-even"><td>Center Pivot</td>
+<td>O</td>
+<td>O</td>
+</tr>
+<tr class="row-odd"><td>Reset X Form</td>
+<td>O</td>
 <td>O</td>
 </tr>
 <tr class="row-even"><td>Collider</td>
