Updates the index for payment

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ This is free.</dd>
 <dt>UModeler Pro</dt>
 <dd>The Pro version has lots of advanced tools such as bevel, boolean, mirror, slice, loop slice, follow, and much more.
 With Pro version, you can make complicated shapes for real assets without leaving Unity.
-This is a paid extension.</dd>
+This is a paid plugin.</dd>
 </dl>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
