Removes sentences about payment in index page

--- a/index.html
+++ b/index.html
@@ -160,12 +160,10 @@ This will help you a lot in creating great game worlds.</p>
 <blockquote>
 <div><dl class="docutils">
 <dt>UModeler Basic</dt>
-<dd>The basic version includes the core features enough to create simple meshes and levels.
-This is free.</dd>
+<dd>The basic version includes the core features enough to create simple meshes and levels.</dd>
 <dt>UModeler Pro</dt>
 <dd>The Pro version has lots of advanced tools such as bevel, boolean, mirror, slice, loop slice, follow, and much more.
-With Pro version, you can make complicated shapes for real assets without leaving Unity.
-This is a paid plugin.</dd>
+With Pro version, you can make complicated shapes for real assets without leaving Unity.</dd>
 </dl>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
