Tweaks Basic_Vs_

--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -261,7 +261,7 @@ With Pro version, you can make complicated shapes for real assets without leavin
 <td>O</td>
 </tr>
 <tr class="row-odd"><td>Copy</td>
-<td>O</td>
+<td>&nbsp;</td>
 <td>O</td>
 </tr>
 <tr class="row-even"><td>Bridge Fill</td>
@@ -301,7 +301,7 @@ With Pro version, you can make complicated shapes for real assets without leavin
 <td>O</td>
 </tr>
 <tr class="row-odd"><td>Extrude Edge</td>
-<td>O</td>
+<td>&nbsp;</td>
 <td>O</td>
 </tr>
 <tr class="row-even"><td>Extrude Multiple</td>
