Disabled curve and disc in basic_vs_pro_comparison

--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -209,7 +209,7 @@ With Pro version, you can make complicated shapes for real assets without leavin
 <td>O</td>
 </tr>
 <tr class="row-even"><td>Curve</td>
-<td>O</td>
+<td>&nbsp;</td>
 <td>O</td>
 </tr>
 <tr class="row-odd"><td>Rectangle</td>
@@ -217,7 +217,7 @@ With Pro version, you can make complicated shapes for real assets without leavin
 <td>O</td>
 </tr>
 <tr class="row-even"><td>Disc</td>
-<td>O</td>
+<td>&nbsp;</td>
 <td>O</td>
 </tr>
 <tr class="row-odd"><td>Stair Profile</td>
