RoofWindow page of Simple House

--- a/tutorials/simple_house/basic_frame.html
+++ b/tutorials/simple_house/basic_frame.html
@@ -162,16 +162,16 @@
 <img alt="../../_images/tool_menu.png" src="../../_images/tool_menu.png" />
 </div>
 </div></blockquote>
-<p>Or you can add a UModeler component in a game object which is already created.</p>
-<p>Once UModeler component is added to a game object, you can see the UModeler menu on the inspector window.
+<p>Or, you can add a UModeler component in a game object which is already created.</p>
+<p>Once the UModeler component is added to a game object, you can see the UModeler menu on the inspector window.
 You may be familiarized with some buttons below. Even if not, don&#8217;t worry because you&#8217;ll get used to them after you finish this tutorial.</p>
 <blockquote>
 <div><div class="figure">
 <img alt="../../_images/umodeler_pro_menu.png" src="../../_images/umodeler_pro_menu.png" />
 </div>
 </div></blockquote>
-<p>2. Choose Box button in the menu panel. And drag a mouse holding LMB anywhere on the floor to draw a rectangle.
-When a rectangle is made(The size doesn&#8217;t matter this time), release your finger from LMB and raise a mouse cursor.
+<p>2. Choose Box button in the menu panel and drag a mouse holding LMB anywhere on the floor to draw a rectangle.
+When a rectangle is made(the size doesn&#8217;t matter this time), release your finger from LMB and raise the mouse cursor.
 When a box is made, Click LMB.</p>
 <blockquote>
 <div><div class="figure">
@@ -189,7 +189,7 @@ Fill in each editor box called Width, Depth and Height with 7.2, 11.5 and 4.35 i
 </div>
 </div></blockquote>
 <p>4. Now we&#8217;ll make a roof. Choose the Polyline button under Drawing group.
-If it&#8217;s hard for you to find the button, Press Enter key so that Search edit box under Tools in the inspector is enabled.
+If it&#8217;s hard for you to find the button, press Enter key so that Search edit box under Tools in the inspector is enabled.
 Enter &#8220;Polyl&#8221; there. Then only Polyline button will get displayed as follows. Press Enter button again so that the Polyline tool will be selected.</p>
 <blockquote>
 <div><div class="figure">
