--- a/tutorials/simple_house/roof_window.html
+++ b/tutorials/simple_house/roof_window.html
@@ -223,6 +223,204 @@ Move the gizmo in the X direction so that a rectangle created by this movement w
 <img alt="../../_images/roofwindow_8.jpg" src="../../_images/roofwindow_8.jpg" />
 </div>
 </div></blockquote>
+<ol class="arabic simple" start="10">
+<li>Remove the outside rectangle cut in step 9 by selecting the polygon with Polygon Tool and press Eraser button in the inspector.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_9.jpg" src="../../_images/roofwindow_9.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="11">
+<li>Select the two polygons made in the previous steps with Polygon Tool.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_10.jpg" src="../../_images/roofwindow_10.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="12">
+<li>Drag the red arrow of the gizmo holding SHIFT to move the selected polygons outside.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_11.jpg" src="../../_images/roofwindow_11.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="13">
+<li>Using Edge Tool, choose an edge as below.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_12.jpg" src="../../_images/roofwindow_12.jpg" />
+</div>
+</div></blockquote>
+<p>14. Choose Extrude Tool to make the current tool Extrude Edge Tool.
+Drag the translation gizmo to stretch the selected edge toward the building.</p>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_13.jpg" src="../../_images/roofwindow_13.jpg" />
+</div>
+</div></blockquote>
+<p>15. Using Extrude Edge Tool, pull down an edge of the top retangle to the bottom rectangle made in step 14.
+Make sure that &#8220;Snap To Polygon&#8221; property in the inspector is enable while doing this.</p>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_14.jpg" src="../../_images/roofwindow_14.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="16">
+<li>Using Polygon Tool, select the outside polygon cut in step 15 as follows.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_15.jpg" src="../../_images/roofwindow_15.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="17">
+<li>Get rid of the selected polygon with Eraser Tool.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_16.jpg" src="../../_images/roofwindow_16.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="18">
+<li>Go to Edge Tool. Choose the two edges at a side hole as below.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_17.jpg" src="../../_images/roofwindow_17.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="19">
+<li>Click Bridge Tool to fill the space between the two selected edges with a polygon.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_18.jpg" src="../../_images/roofwindow_18.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="20">
+<li>Fill the opposite hole as you did in steps 18 and 19.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_19.jpg" src="../../_images/roofwindow_19.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="21">
+<li>Using Polyline tool, draw an edge splitting the top rectangle in half as below.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_20.jpg" src="../../_images/roofwindow_20.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="22">
+<li>Go to Edge tool to select the edge drawn in Step 21 and move it up by 0.5m</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_21.jpg" src="../../_images/roofwindow_21.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="23">
+<li>Using Extrude Tool, pull up either inclined sides of the roof by 0.06m. &#8220;Leave Side Edges&#8221; property needs to be on.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_22.jpg" src="../../_images/roofwindow_22.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="24">
+<li>Get rid of the two polygons, which look sunken, at the top of the roof with Eraser Tool.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_23.jpg" src="../../_images/roofwindow_23.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="25">
+<li>Go to Edge tool and select two top edges of the roof as below.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_24.jpg" src="../../_images/roofwindow_24.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="26">
+<li>Select two edge consisting of the triangle hole at the front as follows.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_25.jpg" src="../../_images/roofwindow_25.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="27">
+<li>Select Bridge Tool to fill the triangle hole with a polygon.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_26.jpg" src="../../_images/roofwindow_26.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="28">
+<li>Fill the opposite triangle hole as you did in steps 26 and 27.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_27.jpg" src="../../_images/roofwindow_27.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="29">
+<li>Go to Eraser Tool to get rid of the edges left in steps 25,26,27 and 28.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_28.jpg" src="../../_images/roofwindow_28.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="30">
+<li>Draw an edge dividing the top rectangle in half with Polyline Tool as below.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_29.jpg" src="../../_images/roofwindow_29.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="31">
+<li>Move up the edge drawn in step 30 properly by dragging the translation gizmo as shown below.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_30.jpg" src="../../_images/roofwindow_30.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="32">
+<li>Using Polygon Tool, select a polygon at the top of the roof.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_31.jpg" src="../../_images/roofwindow_31.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="33">
+<li>Holding CTRL, select the other polygon below the selected polygon in step 32.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_32.jpg" src="../../_images/roofwindow_32.jpg" />
+</div>
+</div></blockquote>
+<ol class="arabic simple" start="34">
+<li>Go to Flatten Tool to flatten the two selected polygons.</li>
+</ol>
+<blockquote>
+<div><div class="figure">
+<img alt="../../_images/roofwindow_33.jpg" src="../../_images/roofwindow_33.jpg" />
+</div>
+</div></blockquote>
 </div>
 
 
