Updates the latest information

--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -190,7 +190,7 @@ With Pro version, you can make complicated shapes for real assets without leavin
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Hoop Selection</td>
+<tr class="row-even"><td>Ring Selection</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
@@ -366,7 +366,7 @@ With Pro version, you can make complicated shapes for real assets without leavin
 <td>O</td>
 <td>O</td>
 </tr>
-<tr class="row-even"><td>Reset X Form</td>
+<tr class="row-even"><td>Freeze X Form</td>
 <td>O</td>
 <td>O</td>
 </tr>
@@ -375,7 +375,7 @@ With Pro version, you can make complicated shapes for real assets without leavin
 <td>O</td>
 </tr>
 <tr class="row-even"><td>Export to Obj</td>
-<td>&nbsp;</td>
+<td>O</td>
 <td>O</td>
 </tr>
 <tr class="row-odd"><td>Backface</td>
