--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -158,7 +158,8 @@ With Pro version, you can make complicated shapes for real assets without leavin
 </thead>
 <tbody valign="top">
 <tr class="row-even"><td>Payment</td>
-<td>Free</td>
+<td>For
+free</td>
 <td>Paid</td>
 </tr>
 <tr class="row-odd"><td>Select/Transform
