--- a/umodeler_pro_releasenotes.html
+++ b/umodeler_pro_releasenotes.html
@@ -147,7 +147,7 @@
 <li>Added .prefab export.</li>
 <li>Fixed a bug in .obj exporter so that material information will be exported well.</li>
 <li>Windows Material has been changed so that Standard shadow is used.</li>
-<li>Maped the window material used in the building in Demo.unity to the window, where a proper texture wasn’t assigned, in the modern building</li>
+<li>Assigned the window material used in the building in Demo.unity to the window, where a proper texture wasn’t assigned, in the modern building</li>
 <li>Fixed a bug about not visible gizmo when the other object get selected from the modeler object on the Hierarchy window.</li>
 <li>Fixed “Convert from Mesh” bug so that a mesh with several materials can be converted to UModeler object well.</li>
 </ul>
