--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -328,7 +328,7 @@ free</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
-<tr class="row-odd"><td>Shear</td>
+<tr class="row-odd"><td>Cut</td>
 <td>&nbsp;</td>
 <td>O</td>
 </tr>
