Unchecked Invert Face in Basic_vs_Pro comparison for umodeler basic.

--- a/basic_vs_pro_comparison.html
+++ b/basic_vs_pro_comparison.html
@@ -277,7 +277,7 @@ free</td>
 <td>O</td>
 </tr>
 <tr class="row-even"><td>Invert Face</td>
-<td>O</td>
+<td>&nbsp;</td>
 <td>O</td>
 </tr>
 <tr class="row-odd"><td>Detach</td>
