--- a/umodeler_pro_releasenotes.html
+++ b/umodeler_pro_releasenotes.html
@@ -151,8 +151,8 @@
 <li>Fix - Transform tool : Flickering gizmos in Vertex/Edge/Polygon tools when more 2 views are open.</li>
 <li>Fix - Display : Incorrect vertex cubes&#8217; size bug.</li>
 <li>Fix - Combine Tool : A bug about not working the merge of co-planar polygons.</li>
-<li>Improvement - Transform Tool : Makes the way of changing gizmo same as the way of Unity.</li>
-<li>Improvement - Rectangle Tool : Adds Corner Segment property in Rectangle tool to enable to change how many edges are placed in a rounded corner.</li>
+<li>Improvement - Transform Tool : Made the way of changing gizmo same as the way of Unity.</li>
+<li>Improvement - Rectangle Tool : Added Corner Segment property in Rectangle tool to enable to change how many edges are placed in a rounded corner.</li>
 </ul>
 </div></blockquote>
 </div>
