--- a/umodeler_pro_releasenotes.html
+++ b/umodeler_pro_releasenotes.html
@@ -152,7 +152,12 @@
 <li>Fix - Display : Incorrect vertex cubes&#8217; size bug.</li>
 <li>Fix - Combine Tool : A bug about not working the merge of co-planar polygons.</li>
 <li>Fix - Gizmo : A bug about getting a gizmo locked when UModeler object exits.</li>
-<li>Improvement - Transform Tool : Made the way of changing gizmo same as the way of Unity.</li>
+<li>Improvement - Transform Tool : Made the way of changing gizmo same as the way of Unity. The gizmo can be switched to another by clicking on the following icons as well as pressing W,E and R.</li>
+</ul>
+<div class="figure">
+<img alt="_images/UModeler_Gizmo_Switch.gif" src="_images/UModeler_Gizmo_Switch.gif" />
+</div>
+<ul class="simple">
 <li>Improvement - Rectangle Tool : Added Corner Segment property in Rectangle tool to enable to change how many edges are placed in a rounded corner.</li>
 </ul>
 </div></blockquote>
