Added an image to showcase how Corner Segment property in Rectangle works to Pro release note.

--- a/umodeler_pro_releasenotes.html
+++ b/umodeler_pro_releasenotes.html
@@ -160,6 +160,9 @@
 <ul class="simple">
 <li>Improvement - Rectangle Tool : Added Corner Segment property in Rectangle tool to enable to change how many edges are placed in a rounded corner.</li>
 </ul>
+<div class="figure">
+<img alt="_images/UModeler_Rectangle_Corner_Length_Segment.gif" src="_images/UModeler_Rectangle_Corner_Length_Segment.gif" />
+</div>
 </div></blockquote>
 </div>
 <div class="section" id="id1">
