UVEditor - Unwrapping page.

--- a/UVEditor/uvsettings.html
+++ b/UVEditor/uvsettings.html
@@ -163,7 +163,7 @@
 </div></blockquote>
 <dl class="docutils">
 <dt>Enable Snap</dt>
-<dd>If this is on, UV transformation will be affectad by Grid Snap Size and Rotation Snap Size specified below.</dd>
+<dd>If this is on, UV transform will be affectad by <code class="docutils literal"><span class="pre">Grid</span> <span class="pre">Snap</span> <span class="pre">Size</span></code> and <code class="docutils literal"><span class="pre">Rotation</span> <span class="pre">Snap</span> <span class="pre">Size</span></code> specified below.</dd>
 <dt>Grid Snap Size</dt>
 <dd>This defines how many size the UVs move whenever they are dragged or translated by the gizmo.</dd>
 <dt>Rotation Snap Size</dt>
@@ -179,7 +179,7 @@
 <dt>Current Tex</dt>
 <dd>A material list of the selected object.</dd>
 <dt>Use Cross Cursor</dt>
-<dd>Displays Cross Cursor, which is used as a pivot of transformation, and makes you to drag it to move.</dd>
+<dd>Displays <code class="docutils literal"><span class="pre">Cross</span> <span class="pre">Cursor</span></code>, which is used as a pivot of transformation, and makes you to drag it to move.</dd>
 </dl>
 </div>
 
