--- a/UVEditor/unwrap.html
+++ b/UVEditor/unwrap.html
@@ -202,7 +202,7 @@
 </dl>
 <div class="figure" id="id1">
 <a class="reference internal image-reference" href="../_images/UModeler_UVEditor_PlaneViewProjection.gif"><img alt="../_images/UModeler_UVEditor_PlaneViewProjection.gif" src="../_images/UModeler_UVEditor_PlaneViewProjection.gif" style="width: 1296.3500000000001px; height: 773.85px;" /></a>
-<p class="caption"><span class="caption-text">Unwrapping the selectiong in the <code class="docutils literal"><span class="pre">View</span></code> direction and <code class="docutils literal"><span class="pre">Normal</span></code> direction.</span></p>
+<p class="caption"><span class="caption-text">Unwrapping the selected polygons in the <code class="docutils literal"><span class="pre">View</span></code> direction and <code class="docutils literal"><span class="pre">Normal</span></code> direction.</span></p>
 </div>
 </div>
 </div>
