--- a/UVEditor/selection.html
+++ b/UVEditor/selection.html
@@ -202,7 +202,7 @@ In case of All/None selection elements done&#8217;t need to be selected.</p>
 <blockquote>
 <div><div class="figure" id="id4">
 <a class="reference internal image-reference" href="../_images/UModeler_UVEditor_SharedSelection.gif"><img alt="../_images/UModeler_UVEditor_SharedSelection.gif" src="../_images/UModeler_UVEditor_SharedSelection.gif" style="width: 564.85px; height: 374.00000000000006px;" /></a>
-<p class="caption"><span class="caption-text">Overlapped Selection demo.</span></p>
+<p class="caption"><span class="caption-text">Shared Selection demo.</span></p>
 </div>
 </div></blockquote>
 </div>
