UVEditor Break/Merge

--- a/UVEditor/sew.html
+++ b/UVEditor/sew.html
@@ -160,7 +160,7 @@
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
 <dl class="last docutils">
-<dt>Sew and Move/Sew tool will work with the following conditions.</dt>
+<dt>Sew and Move/Sew tools will work with the following conditions.</dt>
 <dd><ol class="first last arabic simple">
 <li>Two groups of edges are selected.</li>
 <li>One group of edges are selected and the correspoinding overlapped edges exist.</li>
@@ -186,7 +186,7 @@
 </div>
 <div class="figure" id="id2">
 <a class="reference internal image-reference" href="../_images/UModeler_UVEditor_SewTools.gif"><img alt="../_images/UModeler_UVEditor_SewTools.gif" src="../_images/UModeler_UVEditor_SewTools.gif" style="width: 691.9000000000001px; height: 442.75000000000006px;" /></a>
-<p class="caption"><span class="caption-text">Demos of Sew and Move/Sew Tools</span></p>
+<p class="caption"><span class="caption-text">Demo of Sew and Move/Sew Tools</span></p>
 </div>
 </div></blockquote>
 </div>
