--- a/UVEditor/sew.html
+++ b/UVEditor/sew.html
@@ -160,7 +160,7 @@
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
 <dl class="last docutils">
-<dt>Sew and Move/Sew tools will work with the following conditions.</dt>
+<dt>Sew and Move/Sew tools will work with one of the following conditions.</dt>
 <dd><ol class="first last arabic simple">
 <li>Two groups of edges are selected.</li>
 <li>One group of edges are selected and the correspoinding overlapped edges exist.</li>
