--- a/UVEditor/index.html
+++ b/UVEditor/index.html
@@ -157,7 +157,7 @@
 <div class="line"><br /></div>
 </div>
 <div class="figure" id="id1">
-<img alt="../_images/UModeler_UVEditor.png" src="../_images/UModeler_UVEditor.png" />
+<a class="reference internal image-reference" href="../_images/UModeler_UVEditor.png"><img alt="../_images/UModeler_UVEditor.png" src="../_images/UModeler_UVEditor.png" style="width: 1258.4px; height: 723.8000000000001px;" /></a>
 <p class="caption"><span class="caption-text">A pillar made using UModeler and UVs unwrapped and edited with UVEditor</span></p>
 </div>
 </div></blockquote>
