--- a/removetools.html
+++ b/removetools.html
@@ -278,7 +278,7 @@
 <dt>Type</dt>
 <dd><ul class="first last simple">
 <li>Single - Removes the polygons below the custom plane.</li>
-<li>Both - Simply cuts a mesh and leaves all polygons.*</li>
+<li>Both - Simply cuts a mesh and leaves all polygons.</li>
 </ul>
 </dd>
 <dt>Fill Facet</dt>
