--- a/misctools.html
+++ b/misctools.html
@@ -194,6 +194,8 @@
 <dd>Exports the UModeler mesh to .obj</dd>
 <dt>Export to .prefab</dt>
 <dd>Exports the UModeler mesh to .prefab</dd>
+<dt>Export to .asset</dt>
+<dd>Exports the UModeler mesh to .asset</dd>
 </dl>
 </div>
 </div>
