--- a/removetools.html
+++ b/removetools.html
@@ -209,9 +209,9 @@
 <dl class="docutils">
 <dt>Combine Type</dt>
 <dd><ul class="first last simple">
-<li>First - Places the remaining vertex at the location of the first one selected.</li>
-<li>Last - Places the remaining vertex at the location of the last one selected.</li>
-<li>Center - Places the remaining vertex at the center of the selected vertices.</li>
+<li><code class="docutils literal"><span class="pre">First</span></code> - Places the remaining vertex at the location of the first one selected.</li>
+<li><code class="docutils literal"><span class="pre">Last</span></code> - Places the remaining vertex at the location of the last one selected.</li>
+<li><code class="docutils literal"><span class="pre">Center</span></code> - Places the remaining vertex at the center of the selected vertices.</li>
 </ul>
 </dd>
 <dt>Collapse</dt>
@@ -277,8 +277,8 @@
 <dl class="docutils">
 <dt>Type</dt>
 <dd><ul class="first last simple">
-<li>Single - Removes the polygons below the custom plane.</li>
-<li>Both - Simply cuts a mesh and leaves all polygons.</li>
+<li><code class="docutils literal"><span class="pre">Single</span></code> - Removes the polygons below the custom plane.</li>
+<li><code class="docutils literal"><span class="pre">Both</span></code> - Simply cuts a mesh and leaves all polygons.</li>
 </ul>
 </dd>
 <dt>Fill Facet</dt>
