--- a/surfacetools.html
+++ b/surfacetools.html
@@ -199,8 +199,8 @@
 <dl class="docutils">
 <dt>Mode</dt>
 <dd><ul class="first last simple">
-<li>Absolute : The properties are set to the selected polygons directly</li>
-<li>Relative : The properties are added to the selected polygons.</li>
+<li><code class="docutils literal"><span class="pre">Absolute</span></code> : The properties are set to the selected polygons directly</li>
+<li><code class="docutils literal"><span class="pre">Relative</span></code> : The properties are added to the selected polygons.</li>
 </ul>
 </dd>
 <dt>Shift</dt>
@@ -211,8 +211,8 @@
 <dd>Rotation of UVs</dd>
 <dt>Tiling</dt>
 <dd><ul class="first last simple">
-<li>X : Changes texture tiling on selected surfaces in the X direction.</li>
-<li>Y : Changes texture tiling on selected surfaces in the Y direction.</li>
+<li><code class="docutils literal"><span class="pre">X</span></code> : Changes texture tiling on selected surfaces in the X direction.</li>
+<li><code class="docutils literal"><span class="pre">Y</span></code> : Changes texture tiling on selected surfaces in the Y direction.</li>
 </ul>
 </dd>
 <dt>Fix UVs according to Tiling</dt>
