--- a/tweaktools.html
+++ b/tweaktools.html
@@ -165,10 +165,10 @@
 <dl class="docutils">
 <dt>Projection Dir</dt>
 <dd><ul class="first last simple">
-<li>Up - Y direction</li>
-<li>Right - X direction</li>
-<li>Forward - Z direction</li>
-<li>Last Polygon - The normal direction of the last selected polygon.</li>
+<li><code class="docutils literal"><span class="pre">Up</span></code> - Y direction</li>
+<li><code class="docutils literal"><span class="pre">Right</span></code> - X direction</li>
+<li><code class="docutils literal"><span class="pre">Forward</span></code> - Z direction</li>
+<li><code class="docutils literal"><span class="pre">Last</span> <span class="pre">Polygon</span></code> - The normal direction of the last selected polygon.</li>
 </ul>
 </dd>
 </dl>
