--- a/addtools.html
+++ b/addtools.html
@@ -492,7 +492,7 @@ Values less than 0.5 gives concave bevel and values more than 0.5 gives convex b
 <li>Enter Clone tool.</li>
 <li>Point a polygon you want to clone by putting the mouse over it if polygons are not selected when this tool is activated.</li>
 <li>Drag the mouse to draw a line. You can make sure that the cloned polygons will be aligned with the line.</li>
-<li>Adjust <code class="docutils literal"><span class="pre">Number</span></code>, <code class="docutils literal"><span class="pre">Distance</span></code> and <code class="docutils literal"><span class="pre">Arrangement</span></code> in <code class="docutils literal"><span class="pre">Properties</span></code>.</li>
+<li>Adjust <code class="docutils literal"><span class="pre">Number</span></code>, <code class="docutils literal"><span class="pre">Distance</span></code> and <code class="docutils literal"><span class="pre">Arrangement</span></code> in <code class="docutils literal"><span class="pre">Properties</span></code> if necessary.</li>
 </ol>
 </div>
 <div class="section" id="id12">
