--- a/pushpulltools.html
+++ b/pushpulltools.html
@@ -199,7 +199,7 @@
 </dl>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
-<p class="last">Please note that <code class="docutils literal"><span class="pre">Border</span> <span class="pre">Check</span></code> property needs many pre-calculations so it may affect the performance. Therefore, if you feel any lag as starting push/pull, please turn this property off and try again.</p>
+<p class="last">Please note that <code class="docutils literal"><span class="pre">Border</span> <span class="pre">Check</span></code> property needs many pre-calculations so it may affect the performance. Therefore, if you feel any lag at the beginning of push/pull, please turn this property off and try again.</p>
 </div>
 <dl class="docutils">
 <dt>Continuous</dt>
